@@ -1,6 +1,7 @@
 4.1 [Next Release]:
 - Added show detail previous bans message on join
 - Added permission: exempt from kicks (mcbans.kick.exempt)
+- Auto regenerate missing locale files on /mcbans reload
 - Fixed language file warning
 - Fixed ban sync
 
